<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Macinsiders Chat</string>
    <string name="author">Developed by <b>Afzal Najam</b></string>

    <string name="action_refresh">Refresh</string>
    <string name="action_logout">Logout</string>
    <string name="action_clearmessages">Clear Messages</string>
    <string name="macinsiders_logo">Macinsiders Logo</string>
    <string name="login_username_hint">Enter your username</string>
    <string name="login_password_hint">Enter your password</string>
    <string name="login">Login</string>

    <string name="user_list">USERS</string>
    <string name="options_list">OPTIONS</string>
    <string name="underline"><u>Underline</u></string>
    <string name="italic">Italic</string>
    <string name="bold">Bold</string>
    <string name="type_message_hint">Type message</string>
    <string name="signing_in">Signing in&#8230;</string>
    <string name="send_message">Send</string>
    <string name="action_prefs">Settings</string>

    <string name="pref_appearance">Appearance</string>
    <string name="pref_var_msg_width">Variable message width</string>
    <string name="pref_var_msg_width_summary">If checked, messages will only be as wide as their
        content
    </string>
    <string name="pref_notification">Notifications</string>
    <string name="pref_persist_notification">Show persistent notification</string>
    <string name="pref_persist_notification_summary">Shows a notification in the shade when app is
        running in the background
    </string>
    <string name="copy_text">Copy text</string>
    <string name="reply">Reply</string>
    <string name="signup">Sign up</string>
    <string name="action_about">About</string>
    <string name="legal">All rights reserved.\nNot liable for any damage incurred from use of this
        software including but not limited to: monetary loss, temporary paralysis, halitosis,
        spontaneous combustion, road rash, and or premature hair loss.
    </string>
    <string name="author_email">afzalnaj+michat@gmail.com</string>

    <string name="error_download">Download Error</string>
    <string name="error_image">Re-expand the attached images to retry</string>
    <string name="error_image_activity">Re-open the image to retry</string>
    <string name="show_options_panel">Show options panel</string>

    <plurals name="numberOfImages">
        <item quantity="one">1 image attached</item>
        <item quantity="other">%d images attached</item>
    </plurals>

    <plurals name="numberofUsers">
        <item quantity="one">1 user online</item>
        <item quantity="other">%d users online</item>
    </plurals>

</resources>