<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh"
        app:showAsAction="ifRoom"
        android:title="@string/action_refresh" />
    <item
        android:id="@+id/action_prefs"
        android:icon="@android:drawable/ic_menu_preferences"
        android:visible="false"
        app:showAsAction="never"
        android:title="@string/action_prefs" />
    <item
        android:id="@+id/action_clearmessages"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        app:showAsAction="never"
        android:title="@string/action_clearmessages" />
    <item
        android:id="@+id/action_logout"
        android:icon="@android:drawable/ic_menu_revert"
        app:showAsAction="never"
        android:title="@string/action_logout" />
    <item
        android:id="@+id/action_about"
        android:icon="@android:drawable/ic_menu_info_details"
        app:showAsAction="never"
        android:title="@string/action_about" />

</menu>