<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:background="#242424">

    <TextView
        android:id="@+id/optionslabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/options_list"
        android:textColor="#54c0cb"
        android:paddingBottom="8dp"
        android:paddingLeft="4dp" />

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/optionslabel"
        android:layout_centerVertical="true"
        android:background="#54c0cb" />

    <CheckBox
        android:id="@+id/boldchkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/optionslabel"
        android:layout_below="@+id/separator"
        android:layout_marginTop="18dp"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        android:text="@string/bold" />

    <CheckBox
        android:id="@+id/italicchkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/optionslabel"
        android:layout_below="@+id/boldchkbox"
        android:layout_marginTop="18dp"
        android:textColor="#FFFFFF"
        android:textStyle="italic"
        android:text="@string/italic" />

    <CheckBox
        android:id="@+id/underlinechkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/optionslabel"
        android:layout_below="@+id/italicchkbox"
        android:layout_marginTop="18dp"
        android:textColor="#FFFFFF"
        android:text="@string/underline" />

</RelativeLayout>