<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <ImageView android:id="@+id/logo"
        android:src="@drawable/ic_app"
        android:layout_width="136dp"
        android:layout_height="136dp"
        android:layout_centerHorizontal="true" />

    <TextView android:id="@+id/app_name"
        android:text="@string/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_centerHorizontal="true"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <TextView android:id="@+id/version"
        android:text="version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_name"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:textStyle="italic"
        android:fontFamily="sans-serif-light" />

    <TextView android:id="@+id/author"
        android:text="@string/author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/version"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:textSize="18sp" />

    <TextView android:id="@+id/author_email"
        android:text="@string/author_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/author"
        android:layout_centerHorizontal="true"
        android:textSize="18sp"
        android:linksClickable="true" />

    <TextView android:id="@+id/legal"
        android:text="@string/legal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/author_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:textSize="18sp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center" />
</RelativeLayout>