<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgrepeat"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/miLogo"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="96dp"
            android:contentDescription="@string/macinsiders_logo"
            android:src="@drawable/ic_milogo" />

        <ViewFlipper
            android:id="@+id/loginflipper"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/miLogo"
            android:layout_marginTop="56dp" >

            <RelativeLayout
                android:id="@+id/loginform"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/card_white"
                    android:ems="10"
                    android:hint="@string/login_username_hint"
                    android:singleLine="true"
                    android:paddingBottom="12dp"
                    android:paddingLeft="12dp"
                    android:paddingTop="12dp">

                    <requestFocus />
                </EditText>

                <EditText
                    android:id="@+id/password"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/username"
                    android:layout_below="@+id/username"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/card_white"
                    android:ems="10"
                    android:hint="@string/login_password_hint"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:paddingBottom="12dp"
                    android:paddingLeft="12dp"
                    android:paddingTop="12dp" />

                <include layout="@layout/login_buttons" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/progress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="40dp"
                android:visibility="gone">

                <ProgressBar
                    android:id="@+id/progressbar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:paddingTop="64dp"
                    android:text="@string/signing_in"
                    android:textColor="#aaadb6"
                    android:textStyle="italic" />
            </RelativeLayout>
        </ViewFlipper>
    </RelativeLayout>

</ScrollView>